--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "mocha || true"
+    "test": "mocha || true",
+    "jest": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/HaopengSun/LeetCode-snippets#readme",
   "devDependencies": {
     "chai": "^4.3.4",
+    "jest": "^27.0.4",
     "mocha": "^9.0.0"
   }
 }
