--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha || true",
-    "jest": "jest"
+    "jest": "jest --coverage"
   },
   "repository": {
     "type": "git",
